@@ -1,3 +1,8 @@
+2008-06-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* Tree names can be specified in the External
+	Storage (Billing reports) 
+
 2008-06-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Collector/SNMP.pm:
